force-app/main/default/objects/Jouster__c/Jouster__c.object-meta.xml
<CustomObject>
    <label>Jouster</label>
    <nameField>
        <displayFormat>J{00000}</displayFormat>
        <label>Jouster ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jousters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>