force-app/main/default/objects/Jouster__c/fields/Castle__c.field-meta.xml
<CustomField>
    <fullName>Castle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Castle</label>
    <referenceTo>Castle__c</referenceTo>
    <relationshipLabel>Jousters</relationshipLabel>
    <relationshipName>Jousters</relationshipName>
    <type>Lookup</type>
</CustomField>