force-app/main/default/objects/Jouster__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Name</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Jousters</relationshipLabel>
    <relationshipName>Jousters</relationshipName>
    <type>Lookup</type>
</CustomField>