force-app/main/default/objects/Jouster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Participant_Name__c</columns>
    <columns>Rank__c</columns>
    <columns>Score__c</columns>
    <columns>Color__c</columns>
    <columns>Castle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>